# python-project-49

./: Makefile  README.md  asc_calc_s6.cast  asc_even_s5.cast  asc_gcd_s7.cast  asc_prime_s9.cast  asc_progression_s8.cast  pyproject.toml
brain_games/: cli.py  engine.py  welcome.py
brain_games/games/: brain_even.py  calc.py  constants.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calc_broken.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
