[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first hexlet project"
authors = ["Kirill Chistov <kirill.v.chistov@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
  { include = "brain_even" },
  { include = "brain_calc" }
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
prompt = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
